cabal-version:          2.4
name:                   h
version:                0.0.1
build-type:             Simple

flag dev
    description: whether to compile test things
    default: False
    manual: True

common config
  ghc-options:          -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -msse4.2
  default-language:     Haskell2010

common common-deps
  build-depends:
      base                >= 4.7          && < 5
    , ansi-terminal      ^>= 0.10.2
    , array              ^>= 0.5.3.0
    , bytestring         ^>= 0.10.10.0
    , generic-lens       ^>= 1.1.0.0
    , hw-bits            ^>= 0.7.0.9
    , lens               ^>= 4.18.1
    , mtl                ^>= 2.2.2
    , text               ^>= 1.2.4.0
    , unix               ^>= 2.7.2.2
    , vector             ^>= 0.12.0.3
    , stm                ^>= 2.5.0.0
    , bindings-portaudio ^>= 0.2
    , linear             ^>= 1.20.9
    , time               ^>= 1.9.3
    , synthesizer-core   ^>= 0.8.2.1
    , storablevector     ^>= 0.2.13
    , linear             ^>= 1.20.9
    , numeric-prelude    ^>= 0.4.3.1
 -- , timers-tick        ^>= 0.4.2.0
    , timers             ^>= 0.2.0.3
    , suspend            ^>= 0.2.0.0
    , echo               ^>= 0.1.3
    , containers         ^>= 0.6.0.1

library
  import:               common-deps, config
  exposed-modules:      ASM.Assembler
                        ASM.Lexer
                        ASM.Parser
                        CPU
                        CPU.Debugger
                        CPU.Debugger.Status
                        CPU.Debugger.Debug
                        CPU.Debugger.Mode
                        CPU.Hardware.Interrupt
                        CPU.Hardware.Terminal
                        CPU.Hardware.Timer
                        CPU.Hardware.Timer.JiffyTimer
                        CPU.Hardware.Sound
                        CPU.Hardware.Sound.SID
                        CPU.Hardware.Sound.Voice
                        CPU.Operand
                        CPU.Program
                        CPU.Run
                        CPU.Segment
                        CPU.Instructions.Assembles
                        CPU.Instructions.Decodes
                        CPU.Instructions.Execute
                        CPU.Instructions.Opcode
                        CPU.Instructions.Impl
                        CPU.Instructions.Jumps
                        CPU.Instructions.Length
                        CPU.Instructions.Timing
                        CPU.Instructions.IS.ADC
                        CPU.Instructions.IS.AND
                        CPU.Instructions.IS.ASL
                        CPU.Instructions.IS.B
                        CPU.Instructions.IS.BRK
                        CPU.Instructions.IS.CL
                        CPU.Instructions.IS.CMP
                        CPU.Instructions.IS.CPX
                        CPU.Instructions.IS.CPY
                        CPU.Instructions.IS.DE
                        CPU.Instructions.IS.EOR
                        CPU.Instructions.IS.IN
                        CPU.Instructions.IS.JMP
                        CPU.Instructions.IS.JSR
                        CPU.Instructions.IS.LDA
                        CPU.Instructions.IS.LDX
                        CPU.Instructions.IS.LDY
                        CPU.Instructions.IS.LSR
                        CPU.Instructions.IS.NOP
                        CPU.Instructions.IS.ORA
                        CPU.Instructions.IS.PH
                        CPU.Instructions.IS.PL
                        CPU.Instructions.IS.ROL
                        CPU.Instructions.IS.ROR
                        CPU.Instructions.IS.RT
                        CPU.Instructions.IS.SBC
                        CPU.Instructions.IS.SE
                        CPU.Instructions.IS.STA
                        CPU.Instructions.IS.STX
                        CPU.Instructions.IS.STY
                        CPU.Instructions.IS.T
  hs-source-dirs:       src
  if flag(dev)
    build-depends:      hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , bytestring-to-vector ^>= 0.3.0.1
                      , optparse-applicative ^>= 0.15.1.0
  build-tool-depends:   alex:alex, happy:happy

-- library sasm-lib
--   import:               common-deps, config
--   exposed-modules:      Assembler
--                         Assembly
--   hs-source-dirs:       sasm
--   build-depends:        h
--   build-tool-depends:   alex:alex

executable sasm
  import:               common-deps, config
  main-is:              Main.hs
  hs-source-dirs:       sasm
  ghc-options:          -threaded -rtsopts
  build-depends:        h
                      , bytestring-to-vector ^>= 0.3.0.1
                      , optparse-applicative ^>= 0.15.1.0
  --, sasm-lib

-- library cpu-lib
--   import:               common-deps, config
--   build-depends:        h, sasm-lib
--   exposed-modules:      Run
--   hs-source-dirs:       cpu

executable run
  import:               common-deps, config
  main-is:              Main.hs
  hs-source-dirs:       run
  ghc-options:          -threaded -rtsopts
  build-depends:        h
                      , bytestring-to-vector ^>= 0.3.0.1
                      , optparse-applicative ^>= 0.15.1.0
  --, sasm-lib, cpu-lib

test-suite h-test
  import:               common-deps, config
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:        CPU.Gen
                        CPU.Instructions.Gen
                        ASM.AssemblerSpec
                        CPU.RunSpec
                        CPU.Instructions.ADCSpec
                        CPU.Instructions.ANDSpec
                        CPU.Instructions.ASLSpec
                        CPU.Instructions.BSpec
                        CPU.Instructions.BRKSpec
                        CPU.Instructions.CLSpec
                        CPU.Instructions.CMPSpec
                        CPU.Instructions.CPXSpec
                        CPU.Instructions.CPYSpec
                        CPU.Instructions.DESpec
                        CPU.Instructions.EORSpec
                        CPU.Instructions.INSpec
                        CPU.Instructions.JMPSpec
                        CPU.Instructions.JSRSpec
                        CPU.Instructions.LDASpec
                        CPU.Instructions.LDXSpec
                        CPU.Instructions.LDYSpec
                        CPU.Instructions.LSRSpec
                        CPU.Instructions.NOPSpec
                        CPU.Instructions.ORASpec
                        CPU.Instructions.PHSpec
                        CPU.Instructions.PLSpec
                        CPU.Instructions.ROLSpec
                        CPU.Instructions.RORSpec
                        CPU.Instructions.RTSpec
                        CPU.Instructions.SESpec
                        CPU.Instructions.SBCSpec
                        CPU.Instructions.STASpec
                        CPU.Instructions.STXSpec
                        CPU.Instructions.STYSpec
                        CPU.Instructions.TSpec
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        h
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , hspec-megaparsec           ^>= 2.1.0
                      , qm-interpolated-string     ^>= 0.3.0.0
                      -- , sasm-lib
                      -- , cpu-lib
