cabal-version:          2.4
name:                   h
version:                0.0.1
build-type:             Simple

common config
  ghc-options:          -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -msse4.2
  default-language:     Haskell2010

common common-deps
  build-depends:
      base                  >= 4.7          && < 5
    , ansi-terminal        ^>= 0.10.2
    , array                ^>= 0.5.3.0
    , binary               ^>= 0.8
    , bindings-portaudio   ^>= 0.2.1
    , bytestring           ^>= 0.10.10.0
    , bytestring-to-vector ^>= 0.3.0.1
    , containers           ^>= 0.6.0.1
    , echo                 ^>= 0.1.3
    , generic-lens         ^>= 1.2.0.1
    , hw-bits              ^>= 0.7.0.9
    , lens                 ^>= 4.18.1
    , linear               ^>= 1.20.9
    , linear               ^>= 1.20.9
    , mtl                  ^>= 2.2.2
    , numeric-prelude      ^>= 0.4.3.1
    , OpenGL               ^>= 3.0.3.0
    , sdl2                 ^>= 2.5.0.0
    , stm                  ^>= 2.5.0.0
    , storablevector       ^>= 0.2.13
    , suspend              ^>= 0.2.0.0
    , synthesizer-core     ^>= 0.8.2.1
    , text                 ^>= 1.2.4.0
    , text-latin1          ^>= 0.3.1
    , time                 ^>= 1.9.3
    , timers               ^>= 0.2.0.3
    , unix                 ^>= 2.7.2.2
    , vector               ^>= 0.12.0.3

library sasm-lexer-lib
  import:               common-deps, config
  exposed-modules:      ASM.Lexer
  hs-source-dirs:       sasm-lexer
  build-tool-depends:   alex:alex

library sasm-parser-lib
  import:               common-deps, config
  exposed-modules:      ASM.Parser
  hs-source-dirs:       sasm-parser
  build-tool-depends:   alex:alex
  build-depends:        sasm-lib
                      , sasm-lexer-lib
  build-tool-depends:   happy:happy

library sasm-assembler-lib
  import:               common-deps, config
  exposed-modules:      ASM.Assembler
  hs-source-dirs:       sasm-assembler
  build-depends:        sasm-parser-lib
                      , sasm-lib

library sasm-lib
  import:               common-deps, config
  exposed-modules:      ASM.Assembles
                        ASM.Length
                        ASM.Opcode
                        ASM.Operand
                        ASM.Program
                        ASM.Segment
  hs-source-dirs:       sasm

executable sasm
  import:               common-deps, config
  main-is:              Main.hs
  other-modules:        ASM.Assembler
  hs-source-dirs:       sasm-assembler
  ghc-options:          -threaded -rtsopts
  build-depends:      , optparse-applicative ^>= 0.15.1.0
                      , cpu-lib
                      , sasm-lib
                      , sasm-parser-lib
                      , sasm-assembler-lib

library cpu-lib
  import:               common-deps, config
  exposed-modules:      CPU
                        CPU.Debugger
                        CPU.Debugger.Status
                        CPU.Debugger.Debug
                        CPU.Debugger.Mode
                        CPU.Disassembler
                        CPU.Hardware.Interrupt
                        CPU.Hardware.Terminal
                        CPU.Hardware.TTY
                        CPU.Hardware.Timer
                        CPU.Hardware.Timer.JiffyTimer
                        CPU.Hardware.Sound
                        CPU.Hardware.Sound.Signal
                        CPU.Hardware.Sound.SID
                        CPU.Hardware.Sound.Voice
                        CPU.Hardware.Video
                        CPU.Hardware.Video.Chars
                        CPU.Hardware.Video.Font
                        CPU.Hardware.Video.Sprite
                        CPU.Hardware.Video.Sprites
                        CPU.Hardware.Video.VIC
                        CPU.Instructions.Decodes
                        CPU.Instructions.Execute
                        CPU.Instructions.Impl
                        CPU.Instructions.Jumps
                        CPU.Instructions.Timing
                        CPU.Instructions.IS.ADC
                        CPU.Instructions.IS.AND
                        CPU.Instructions.IS.ASL
                        CPU.Instructions.IS.B
                        CPU.Instructions.IS.BRK
                        CPU.Instructions.IS.CL
                        CPU.Instructions.IS.CMP
                        CPU.Instructions.IS.CPX
                        CPU.Instructions.IS.CPY
                        CPU.Instructions.IS.DE
                        CPU.Instructions.IS.EOR
                        CPU.Instructions.IS.IN
                        CPU.Instructions.IS.JMP
                        CPU.Instructions.IS.JSR
                        CPU.Instructions.IS.LDA
                        CPU.Instructions.IS.LDX
                        CPU.Instructions.IS.LDY
                        CPU.Instructions.IS.LSR
                        CPU.Instructions.IS.NOP
                        CPU.Instructions.IS.ORA
                        CPU.Instructions.IS.PH
                        CPU.Instructions.IS.PL
                        CPU.Instructions.IS.ROL
                        CPU.Instructions.IS.ROR
                        CPU.Instructions.IS.RT
                        CPU.Instructions.IS.SBC
                        CPU.Instructions.IS.SE
                        CPU.Instructions.IS.STA
                        CPU.Instructions.IS.STX
                        CPU.Instructions.IS.STY
                        CPU.Instructions.IS.T
  hs-source-dirs:       cpu
  build-depends:        sasm-lib

library run-lib
  import:               common-deps, config
  exposed-modules:      CPU.Run
  hs-source-dirs:       run
  build-depends:      , sasm-lib
                      , cpu-lib

executable run
  import:               common-deps, config
  main-is:              Main.hs
  other-modules:        CPU.Run
  hs-source-dirs:       run
  ghc-options:          -threaded -rtsopts
  build-depends:      , optparse-applicative ^>= 0.15.1.0
                      , sasm-lib
                      , cpu-lib

test-suite h-test
  import:               common-deps, config
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:        ASM.AssemblerSpec
                        CPU.Gen
                        CPU.Instructions.Gen
                        CPU.RunSpec
                        CPU.Instructions.IS.ADCSpec
                        CPU.Instructions.IS.ANDSpec
                        CPU.Instructions.IS.ASLSpec
                        CPU.Instructions.IS.BSpec
                        CPU.Instructions.IS.BRKSpec
                        CPU.Instructions.IS.CLSpec
                        CPU.Instructions.IS.CMPSpec
                        CPU.Instructions.IS.CPXSpec
                        CPU.Instructions.IS.CPYSpec
                        CPU.Instructions.IS.DESpec
                        CPU.Instructions.IS.EORSpec
                        CPU.Instructions.IS.INSpec
                        CPU.Instructions.IS.JMPSpec
                        CPU.Instructions.IS.JSRSpec
                        CPU.Instructions.IS.LDASpec
                        CPU.Instructions.IS.LDXSpec
                        CPU.Instructions.IS.LDYSpec
                        CPU.Instructions.IS.LSRSpec
                        CPU.Instructions.IS.NOPSpec
                        CPU.Instructions.IS.ORASpec
                        CPU.Instructions.IS.PHSpec
                        CPU.Instructions.IS.PLSpec
                        CPU.Instructions.IS.ROLSpec
                        CPU.Instructions.IS.RORSpec
                        CPU.Instructions.IS.RTSpec
                        CPU.Instructions.IS.SESpec
                        CPU.Instructions.IS.SBCSpec
                        CPU.Instructions.IS.STASpec
                        CPU.Instructions.IS.STXSpec
                        CPU.Instructions.IS.STYSpec
                        CPU.Instructions.IS.TSpec
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , hspec-megaparsec           ^>= 2.1.0
                      , qm-interpolated-string     ^>= 0.3.0.0
                      , cpu-lib
                      , sasm-lib
                      , sasm-assembler-lib
                      , run-lib
